# watchtower

./: .gitignore  Cargo.toml  README.md  config.example.json
src/: auth.rs  bot.rs  config.rs  constants.rs  main.rs
