[package]
name = "watchtower"
version = "1.0.0"
edition = "2021"

[dependencies]
rustyline = "15.0"
grammers-client = "0.7"
grammers-session = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true